Fix paragraph spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 p {
-  margin: 0;
+  margin: 10px 0;
   padding: 0;
 }
 
